fix: misc fixes (#94)
* fix: inline files over 10mb limit warnings and force download

* fix: put back flavour text while chats loading

* fix: spacing of zero-chats message

* fix: spacing adjustments to prevent sidebar cutoff

* fix: spacing on flavour text to prevent overflow

* fix: spacing to accom new read receipts

* fix: main sidebar toggle should close read receipt sidebar

* style: more helpful message

* fix: sidebar toggle and MessageSidebar behaviour

--- a/src/ui/chat/Chat.scss
+++ b/src/ui/chat/Chat.scss
@@ -25,6 +25,7 @@
       @extend %flex-col;
       @extend %flex-grow-1;
       max-width: 100%;
+      min-width: 0;
       position: relative;
     }
   }
@@ -146,6 +147,7 @@
   @extend %flex-align-center;
   @extend %flex-justify-start;
   height: 100vh;
+  width: 100%;
 
   .headline {
     margin: 160px 48px 0;
