--- a/src/ui/chat/components/InlineFiles.scss
+++ b/src/ui/chat/components/InlineFiles.scss
@@ -94,6 +94,7 @@
     color: $text-dark-secondary;
     font-weight: $font-weight-bold;
     margin-left: $margin-default;
+    min-width: 180px;
     position: relative;
     transition: 250ms;
     width: calc(100% - 100px); // reduce reflow from read receipts
@@ -246,10 +247,11 @@
           font-weight: $font-weight-regular;
         }
 
-        button.display-overlimit-image {
+        button.display-over-limit-image {
           display: inline;
           line-height: 1.3em;
           padding: 0;
+          width: auto;
         }
       }
 
