--- a/src/ui/chat/components/MessageList.scss
+++ b/src/ui/chat/components/MessageList.scss
@@ -161,7 +161,7 @@
     .message-content {
       @extend %flex-col;
       flex-grow: 1;
-      max-width: calc(100vw - 440px); // TODO find solution that is not hard-coded
+      min-width: 0;
 
       a {
         @extend %selectable;
@@ -228,6 +228,7 @@
         line-height: 1.4;
         margin: 0 0 0 $margin-default;
         max-width: calc(100% - 100px);
+        min-width: 96px;
         white-space: pre-wrap;
         word-break: break-word;
       }
